# E2E-Credit-Risk-Prediction

./: .gitignore  main.py  pyproject.toml  requirements.txt
home-credit-default-risk/: README.md
models/: best_hyperparams.json  final_test_results.json
notebooks/: 02_Feature_Engineering.ipynb  03_Model_Training_and_Evaluation.ipynb
src/: __init__.py  focal_loss.py  model_utils.py  transformers.py
