[project]
name = "internship2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asttokens==3.0.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "executing==2.2.1",
    "featuretools==1.31.0",
    "fonttools==4.61.1",
    "future==1.0.0",
    "holidays==0.87",
    "hyperopt==0.2.7",
    "imageio==2.37.2",
    "importlib-resources==6.5.2",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "joblib==1.5.3",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "lazy-loader==0.4",
    "lightgbm==4.6.0",
    "lime==0.2.0.1",
    "llvmlite==0.46.0",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numba==0.63.1",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pillow==12.0.0",
    "pip==25.3",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.0",
    "pure-eval==0.2.3",
    "py4j==0.10.9.9",
    "pydash==8.0.5",
    "pygments==2.19.2",
    "pyparsing==3.3.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "shap==0.50.0",
    "six==1.17.0",
    "slicer==0.0.8",
    "stack-data==0.6.3",
    "threadpoolctl==3.6.0",
    "tifffile==2025.12.20",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "wcwidth==0.2.14",
    "woodwork==0.31.0",
    "xgboost==3.1.2",
]
